--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     function new2() {
         createKanban();
     }
+
 </script>
 
 <body>
@@ -37,7 +38,6 @@
         <div id="kanban">
 
         </div>
-        <button>+</button>
     </div>
 
     <div id="users" style="display: none" ng-controller="UserDataCtrl"> {{userList}} </div>
@@ -118,6 +118,84 @@
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
+        </div>
+    </form>
+
+    <form id="taskssubmit" style="margin: 0 auto">
+        <div class="modal fade" id='exampleModalLabelTask' role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Add Task</h5>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="container" style="border:none;width:550px; padding:10px;" style="background:rgb(255,255,255);margin:0px;padding:0px;border-image:none;width:100%;height:700px;">
+                            <div>
+                                <input type="hidden" id="bugsId" name="bugsId" value=""></input>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8 inputView">
+                                    User<br>
+                                    <input class="viewInputs" list="user" name="user" id="users_" required>
+                                    <datalist id="user">
+                                       
+                                    </datalist>
+                                </div>
+                                <div class="col-md-2 inputView">
+                                    Prio<br>
+                                    <input class="viewInputs" list="prio" id="prios_" name="prio" required>
+                                    <datalist id="prio">
+                                        <option value="1">
+                                            <option value="2">
+                                                <option value="3">
+                                                    <option value="4">
+                                                        <option value="5">
+                                                            <option value="6">
+                                                                <option value="7">
+                                    </datalist>
+                                </div>
+                                <div class="col-md-2 inputView">
+
+                                    Estimate<br>
+                                    <input class="viewInputs" list="estimate" id="estimates_" name="estimate" required>
+                                    <datalist id="estimate">
+                                        <option value="0">
+                                            <option value="0,5">
+                                                <option value="1">
+                                                    <option value="2">
+                                                        <option value="3">
+                                                            <option value="5">
+                                                                <option value="8">
+                                                                    <option value="13">
+                                                                        <option value="20">
+                                                                            <option value="40">
+                                                                                <option value="100">
+                                    </datalist>
+                                </div>
+                            </div>
+                            <div>
+                                Titel:<br>
+                                <input class="viewInputs" id="titel_" type="text" name="titel" required><br>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6 inputView">
+                                    Description:<br>
+                                    <input class="viewInputs" id="description2_" type="textarea" name="description" style="height:350px;font-style:float;" required>
+                                </div>
+                                <div class="col-md-6 inputView">
+                                    Comments:<br>
+                                    <input class="viewInputs" id="comments_" type="textarea" name="Comments" style="height:350px" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" name="button" id="addItem_" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </form>
 </body>
