--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
                 <div ng-controller="BacklogDataCtrl">
                     <button type="button" name="button" id="addItem" class="btn btn-primary" ng-click="test();" onclick="new2()" data-dismiss="modal">Save changes</button>
                     <div id="backlogs" style="display: none"> {{backlogsList}} </div>
-                    <div id="time" style="display: none"> {{time}} </div>
+                    <div id="received">{{received}}</div>
                 </div>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
